--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         
-        <link rel="stylesheet" href="style/style.css/">
+        <link rel="stylesheet" href="style/style.css"/>
     </head>
     <body>
       <div id="container" class="container">
@@ -16,23 +16,23 @@
           <a href="about.html">About Us</a> |
           <a href="contact.html">Contact Us</a>
         </div>
-        <div id="content">
+        <div id="main">
           <h1 style="text-align:center; color:purple">Double 5 Productions</h1>
           <marquee behavior="scroll" direction="right" scrollamount="15" style="color: rgb(181, 114, 245); font-size: 30px;"><b>Double5 Productions</b></marquee>
-          <marquee behavior="scroll" direction="left" scrollamount="25" style="color: sandybrown; font-size: 40px;"><b>Videography</b></marquee>
+          <marquee behavior="scroll" direction="left" scrollamount="25" style="color: #FFDF4F; font-size: 40px;"><b>Videography</b></marquee>
           <marquee behavior="scroll" direction="right" scrollamount="12" style="color: purple; font-size: 40px;"><b>Cinematography</b></marquee>
           <marquee behavior="scroll" direction="left" scrollamount="19" style="color: goldenrod; font-size: 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><b>Graphic Design</b></marquee>
           <marquee behavior="scroll" direction="right" scrollamount="20" style="color: rgb(181, 114, 245); font-size: 30px;"><b>Double5 Productions</b></marquee>
-          <marquee behavior="scroll" direction="left" scrollamount="20" style="color: sandybrown; font-size: 40px;"><b>Photography</b></marquee>
+          <marquee behavior="scroll" direction="left" scrollamount="20" style="color: #FFDF4F; font-size: 40px;"><b>Photography</b></marquee>
           <marquee behavior="scroll" direction="right" scrollamount="25" style="color: purple; font-size: 30px;"><b>Double5 Productions</b></marquee>
     
           <hr>
           <table>
             <tr>
-              <th style="color: goldenrod; font-size: 30px; padding: 35px;">Videography</th>
-              <th style="color: goldenrod; font-size: 30px; padding: 35px;">Cinematography</th>
-              <th style="color: goldenrod; font-size: 30px; padding: 35px;">Photography</th>
-              <th style="color: goldenrod; font-size: 30px; padding: 35px;">Graphic Design</th>
+              <th class="goldtext" style="font-size: 30px; padding: 35px;">Videography</th>
+              <th style="color: #FFDF4F; font-size: 30px; padding: 35px;">Cinematography</th>
+              <th style="color: #FFDF4F; font-size: 30px; padding: 35px;">Photography</th>
+              <th style="color: #FFDF4F; font-size: 30px; padding: 35px;">Graphic Design</th>
             </tr>
           </table>
             <hr>
