Fix slide show and remove unneccessary junk code

--- a/another.html
+++ b/another.html
@@ -130,5 +130,14 @@ function showSlides() {
 }
 </script>
 
+<br>
+    <!--social media logo-->
+ <a href="https://www.facebook.com/"; class="fa fa-facebook";></a>
+ <a href="https://twitter.com/?lang=en" ; class="fa fa-twitter";></a>
+ <a href="https://www.instagram.com/" ; class="fa fa-instagram";></a>
+ <br>
+ <footer class="container">
+   <p>© Double5 Productions 2022</p>
+ </footer>
 </body>
 </html> 
