--- a/about.html
+++ b/about.html
@@ -53,6 +53,16 @@
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
  crossorigin="anonymous"></script>
+
+ <br>
+    <!--social media logo-->
+ <a href="https://www.facebook.com/"; class="fa fa-facebook";></a>
+ <a href="https://twitter.com/?lang=en" ; class="fa fa-twitter";></a>
+ <a href="https://www.instagram.com/" ; class="fa fa-instagram";></a>
+ <br>
+ <footer class="container">
+   <p>© Double5 Productions 2022</p>
+ </footer>
 </body>
 
 </html>
