--- a/success.html
+++ b/success.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-        <title>Success</title>
-</head>
+      <head>
+            <title>Double5 Productions</title>
+            
+            <!-- CSS only -->
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+            
+            <link rel="stylesheet" href="style/style.css"/>
+        </head>
+        <body style="background-color:black;">
+          <div id="header">
+            <div id="container" class="container">
+              <div id="nav">
+                <a href="index.html">Home</a> |
+                <a href="about.html">About Us</a> |
+                <a href="contact.html">Contact Us</a>
+              </div>
 <body>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About Me</a> |
-      <a href="contact.html">Contact Us</a>
 
-      <h1>Your data has been saved.</h1>
+
+      <h1 style="color: purple;">Your data has been saved.</h1>
+
+      <br>
+   <!--social media logo-->
+<a href="https://www.facebook.com/"; class="fa fa-facebook";></a>
+<a href="https://twitter.com/?lang=en" ; class="fa fa-twitter";></a>
+<a href="https://www.instagram.com/" ; class="fa fa-instagram";></a>
+<br>
+<footer class="container">
+  <p style="color: blueviolet;">© Double5 Productions 2022</p>
+</footer>
 </body>
 </html>
