--- a/thing2.html
+++ b/thing2.html
@@ -107,6 +107,15 @@ document.getElementById("toastbtn").onclick = function() {
 }
 </script>
 
+<br>
+    <!--social media logo-->
+ <a href="https://www.facebook.com/"; class="fa fa-facebook";></a>
+ <a href="https://twitter.com/?lang=en" ; class="fa fa-twitter";></a>
+ <a href="https://www.instagram.com/" ; class="fa fa-instagram";></a>
+ <br>
+ <footer class="container">
+   <p>© Double5 Productions 2022</p>
+ </footer>
 </body>
 </html>
 </html>
