Fixed about us and contact page

--- a/another.html
+++ b/another.html
@@ -108,33 +108,36 @@ img {vertical-align: middle;}
   <span class="dot"></span> 
 </div>
 
-<script>
-var slideIndex = 0;
-showSlides();
-
-function showSlides() {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}    
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
-}
+<div class="words words-1">
+  <span>D</span>
+  <span>O</span>
+  <span>U</span>
+  <span>B</span>
+  <span>L</span>
+  <span>E</span>
+  <span></span>
+  <span>5</span>
+</div>
+<div class="words words-1">
+  <span>P</span>
+  <span>R</span>
+  <span>O</span>
+  <span>D</span>
+  <span>U</span>
+  <span>C</span>
+  <span>T</span>
+  <span>I</span>
+  <span>O</span>
+  <span>N</span>
+  <span>S</span>
+</div>
 </script>
 
 <br>
     <!--social media logo-->
- <a href="https://www.facebook.com/"; class="fa fa-facebook";></a>
- <a href="https://twitter.com/?lang=en" ; class="fa fa-twitter";></a>
- <a href="https://www.instagram.com/" ; class="fa fa-instagram";></a>
+    <a href="https://www.facebook.com/Double5Productions/"><img src="Images/facebook.png" style="height: 30px;"/></a>
+    <a href="https://twitter.com/d5_productions"><img src="Images/twitter.png" style="height: 30px;"/></a>
+    <a href="https://www.instagram.com/double5_productions/?hl=en"><img src="Images/instagram.png" style="height: 30px;"/></a>
  <br>
  <footer class="container">
    <p>© Double5 Productions 2022</p>
