--- a/success.html
+++ b/success.html
@@ -13,6 +13,7 @@
           <div id="header">
             <div id="container" class="container">
               <div id="nav">
+                <a href="index.html"><img src="Images/D5P Logo.png" width=100/></a>|
                 <a href="index.html">Home</a> |
                 <a href="about.html">About Us</a> |
                 <a href="contact.html">Contact Us</a>
@@ -22,14 +23,16 @@
 
       <h1 style="color: purple;">Your data has been saved.</h1>
 
+   
+      <footer class="container">
+        <p style="color: blueviolet;">© Double5 Productions 2022</p>
+      
+        <br>
+        <!--social media logo-->
+        <a href="https://www.facebook.com/Double5Productions/"><img src="Images/facebook.png" style="height: 30px;"/></a>
+        <a href="https://twitter.com/d5_productions"><img src="Images/twitter.png" style="height: 30px;"/></a>
+        <a href="https://www.instagram.com/double5_productions/?hl=en"><img src="Images/instagram.png" style="height: 30px;"/></a>
       <br>
-   <!--social media logo-->
-<a href="https://www.facebook.com/"; class="fa fa-facebook";></a>
-<a href="https://twitter.com/?lang=en" ; class="fa fa-twitter";></a>
-<a href="https://www.instagram.com/" ; class="fa fa-instagram";></a>
-<br>
-<footer class="container">
-  <p style="color: blueviolet;">© Double5 Productions 2022</p>
-</footer>
+      </footer>
 </body>
 </html>
