--- a/about.html
+++ b/about.html
@@ -38,25 +38,27 @@
 <div class="container">
   <div class="row">
     <div class="col" style="background-color: rgb(80, 10, 80) ; padding: 10px; border: 1px solid goldenrod; border-radius: 45px / 90px; text-align: center">
-      <h4 style="color: goldenrod;"><b>What We Offer</b></h4>
+      <h4 style="color: goldenrod;"><b>What We Offer</b></h4> <br>
       <i style="color: goldenrod;">
       There's no limit to what you can get designed at <b>Double 5 Productions</b>.
-      Whether you're looking for a spectacular new logo or a stunning video production, our talented community of designers at <b>Double 5 Productions</b> will make it happen. 
-      Our team offers a diverse set of skills and experience through our high-quality designers who deliver only the best. 
-      Our superbly trained team goes the extra mile to listen to your needs and will subsequently offer tailored solutions to meet those needs, setting us apart from the rest.
+      Whether you're looking for a spectacular new logo or a stunning video production, our talented designers at <b>Double 5 Productions</b> will make it happen. 
+      Our high-quality design team offers a diverse set of skills and experience and deliver only the best. 
+      We go the extra mile to listen to your needs and offer tailored solutions to meet those needs, setting us apart from the rest.
      </i>
     </div>
     <div class="col" style="background-color: rgb(80, 10, 80) ; padding: 10px; border: 1px solid goldenrod; border-radius: 45px / 90px; text-align: center">
-      <h4 style="color: goldenrod;"><b>How We Do It</b></h4> 
-      <i style="color: goldenrod;"> We are idea-driven, working with a strong focus on design and user experience. Our projects will engage your audience by creating stunning digital products they will love. 
-        That's what your brand and audience deserve. Whether you’re starting a new business or getting back into your groove, <b>Double 5 Productions</b> understands that it can be stressful and cost-intensive. 
+      <h4 style="color: goldenrod;"><b>How We Do It</b></h4> <br>
+      <i style="color: goldenrod;"> 
+        Whether you’re starting a new business or getting back into your groove, <b>Double 5 Productions</b> understands that it can be stressful and cost-intensive. 
         That’s why we offer top-notch, professional, photography, videography, cinematography and graphic design services 
         to better serve our community of business owners, record labels, recording artists, event organizers, producers, wedding planners, to name a few.
+        We're idea-driven and work with a strong focus on design and user experience. Our projects will engage your audience by creating stunning digital products they will love. 
+        That's what your brand and audience deserve. 
       </i>
     </div>
     <div class="col" style="background-color: rgb(80, 10, 80) ; padding: 10px; border: 1px solid goldenrod; border-radius: 45px / 90px; text-align: center">
-      <h4 style="color: goldenrod;"> <b>What People Say</b></h4>  
-      <i style="color: goldenrod;">But don’t take our word for it; see what our clients have had to say about us over the years in our <a href="gallery.html">Gallery</a> .  
+      <h4 style="color: goldenrod;"> <b>What People Say</b></h4> <br>
+      <i style="color: goldenrod;">Don’t just take our word for it; see what our clients have had to say about us over the years in our <a href="gallery.html">Gallery</a> .  
         We would love to work with you on your upcoming project. 
         Find the right service for you and get the result you'll love today!
       </i>
@@ -68,18 +70,19 @@
 
     <div class="container">
       <div class="row">
-        <div class="col" style="background-color: rgb(80, 10, 80) ; padding: 10px; border: 1px solid goldenrod; border-radius: 45px / 90px; text-align: center">
-          <h4 style="text-align: center; color: goldenrod"><b>Mission</b></h4>
-          <i style="color: goldenrod;">
-            To be the leading digital and graphic design company in Jamaica by consistently providing our customers with high quality products combined with exceptional customer service. 
-            To promote creativity by providing completely unseen and unmatched work for the best presentation of our clients’ brand.
-            To understand all the needs, demands and constrains of our clients
-            Equipping the team with all the required skills and design practices
-            To integrate ethical business practices as well as proactive social responsiveness into our everyday activities.
-            </i>
+        <div class="col" style="background-color: rgb(80, 10, 80) ; padding: 10px; border: 1px solid goldenrod; border-radius: 45px / 90px; text-align: left">
+          <h4 style="text-align: center; color: goldenrod"><b>Mission</b></h4> <br>
+          <i style="color: goldenrod;"> <ul>
+           <li>To be the leading digital and graphic design company in Jamaica by consistently providing our customers with high quality products combined with exceptional customer service.</li> 
+           <li> To promote creativity by providing completely unseen and unmatched work for the best presentation of our clients’ brand.</li> 
+           <li> To understand all the needs, demands and constrains of our clients. </li> 
+           <li>To always be equipped with the required skills and design practices.</li> 
+           <li> To integrate ethical business practices as well as proactive social responsiveness into our everyday activities.</li> 
+          </ul> 
+          </i>
         </div>
-        <div class="col" style="background-color: rgb(80, 10, 80) ; padding: 10px; border: 1px solid goldenrod; border-radius: 45px / 90px; text-align: center">
-          <h4 style="text-align: center; color: goldenrod"> <b>Vision</b></h4> 
+        <div class="col" style="background-color: rgb(80, 10, 80) ; padding: 10px; border: 1px solid goldenrod; border-radius: 45px / 90px; text-align: left">
+          <h4 style="text-align: center; color: goldenrod"> <b>Vision</b></h4>  <br>
           <i style="color: goldenrod;"> <b>Double 5 Productions</b> will be the design and print company of choice in the industry. 
             Our highly trained and dedicated team provides our customers with creative solutions that exceed their expectations of service, quality and affordability. 
             Our customers are comfortable in the knowledge that we are not only providing them a service but we are also accountable to their design and production needs. 
@@ -92,7 +95,7 @@
 </div>
 </div>
 
-    
+<br> 
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
@@ -107,7 +110,7 @@
 <footer class="container">
 <p style="color: blueviolet;">© Double5 Productions 2022</p>
 
-<br>
+
 <!--social media logo-->
 <a href="https://www.facebook.com/Double5Productions/"><img src="Images/facebook.png" style="height: 30px;"/></a>
 <a href="https://twitter.com/d5_productions"><img src="Images/twitter.png" style="height: 30px;"/></a>
