--- a/success.html
+++ b/success.html
@@ -21,7 +21,7 @@
 <body>
 
 
-      <h1 style="color: purple;">Your data has been saved.</h1>
+      <h1 style="color: purple;">Your message has been sent.</h1>
 
    
       <footer class="container">
